--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "googleapis": "^144.0.0",
+    "node-fetch": "^3.3.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
